Modified final file

--- a/frontMatter.tex
+++ b/frontMatter.tex
@@ -38,9 +38,9 @@
 	\vspace{3cm}
 	
 	Accepted on the recommendation of\\\vspace{.6cm}
-	Prof. Dr. Unknown, examiner\\
-	Prof. Dr. 420, co-examiner\\
-	Dr. 786, co-examiner
+	Prof. Dr. XYZ, examiner\\
+	Prof. Dr. PQR, co-examiner\\
+	Dr. WXZ, co-examiner
 }
 \vfill
 2021
